fix: resolved background picture not showing on about page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,13 +8,6 @@ body {
 	font-family: "Roboto", sans-serif;
 }
 
-.aboutBanner {
-	background-image: url("../assets/images/about-banner.jpg");
-	background-size: cover;
-	background-position: center;
-	background-repeat: no-repeat;
-}
-
 @layer utilities {
 	.text-balance {
 		text-wrap: balance;
